app/styles/app.css
* {
  box-sizing: border-box;
}

body {
  font-size: 16px;
}

header {
  background-color: #ea3723;
  padding: 20px 0 0 0;
}

a, a:hover, a:active, a:visited {
  color: #ea3723;
}

a span.name-prefix {
  opacity: 0.33;
}

.search-wrapper {
  background-color: #ea3723;
  padding: 20px 0 25px 0;
}

.container-loading {
  text-align: center;
  padding: 50px 0;
}

.loading {
  color:#7f7f7f;
}

.container-footer {
  text-align: center;
  padding: 50px 0;
  font-size: 13px;
  color: #7f7f7f;
  border-top: 1px solid #d5d5d5;
}

.branding {
  color: white;
  font-weight: 100;
  margin:0;
  font-size: 40px;
}

.branding a {
  color: white;
}

.branding a:hover,
.branding a:active,
.branding a:focus {
  text-decoration: none;
}

.header-subtitle {
  color: #6b1210;
}

a.package-count-link {
  color: #6b1210;
}

a.top-menu-link,
a.top-menu-link:hover {
  color: #6b1210;
  font-size: 18px;
}

.search-field {
  border-radius: 0;
  border: 0;
  font-size: 18px;
  height: 50px;
}

.search-field[disabled=disabled] {
  background-color: rgba(255, 255, 255, 0.6);
}

input[type="search"]::-webkit-search-cancel-button {
  -webkit-appearance: searchfield-cancel-button;
}

.table th {
  font-size: 12px;
}

.cell-name,
.cell-gravatar,
.cell-downloads,
.cell-updated,
.cell-travis {
  vertical-align: middle !important;
  color: #7f7f7f;
}

.cell-name {
  padding: 8px 8px 15px 8px !important;
}

.cell-gravatar {
  width: 190px;
}

.cell-downloads,
.cell-updated {
  width: 130px;
}

.cell-travis {
  padding: 0;
  width: 100px;
}

.cell-clipboard, .cell-github {
  width: 42px;
  vertical-align: middle !important;
}

.clipboard, .github-logo {
  display:none;
}

.clipboard {
  padding-top: 5px;
  padding-left: 10px
}

.github-logo {
  padding-right: 10px;
}

tr.package:hover .clipboard,
tr.package:hover .github-logo {
  display: inline-block;
}

.install-command-input {
  width: 100%;
  border-radius: 6px;
  height: 38px;
  border-style: none;
  background-color: #F0F0F0;
  font-size: 19px;
  padding: 7px;
  outline: 0;
  font-family: monospace;
}

.install-command p {
  margin: 3px 0 0 0;
  font-size: 11px;
}

a.sort-button {
  color: black;
}

.table-packages {
  margin-top: 20px;
}

.gravatar {
  border-radius: 50%;
  margin-right: 5px;
}

.package-link {
  font-size: 24px;
}

.new-package {
  display:inline-block;
  background-color: #ea3723;
  font-size: 11px;
  color:white;
  padding:1px 4px;
  position: relative;
  top: -4px;
}

.demo-link {
  display:inline-block;
  color: #ea3723;
  border: 1px solid #ea3723;
  font-size: 11px;
  padding:1px 4px;
}

.demo-link:hover {
  text-decoration: none;
  background-color: #ea3723;
  color: white;
}

.demo-link:focus {
  text-decoration: none;
}

.list-package-details {
  font-size: 11px;
}

.list-package-details > li {
  background-color: #e6e6e6;
  margin-bottom: 3px;
}

.not-found {
  text-align: center;
  font-size: 20px;
  padding: 50px 0;
  color: #7f7f7f;
  font-weight: bold;
}

.twitter-badge-list-item {
  position: relative;
  top: 3px;
}


.pagination-cell {
  text-align: center;
}

.pagination-link,
.pagination-link:visited {
  display: inline-block;
  margin-top: 20px;
  padding: 15px 20px;
  width: 200px;
  border-radius: 3px;
  border: 2px solid #d5d5d5;
  background-color: #FFF;
  color: #7f7f7f;
  outline:none;
}

.pagination-link:active {
  background-color: #bfbfbf !important;
}

.pagination-link.enabled:hover {
  color: #FFF;
  background-color: #d6d6d6;
}

.pagination-link.disabled {
  color: #d9d9d9;
  border: 2px solid #d9d9d9;
}

.score {
  display: inline-block;
  color: white;
  height: 40px;
  width: 40px;
  line-height: 40px;
  text-align: center;
  border-radius: 3px;
}

.score--s,
.score--WIP {
  background-color: #ACACAC;
}

.score--s1 {
  background-color: #E12728;
}

.score--s2 {
  background-color: #E12728;
}

.score--s3 {
  background-color: #EE9428;
}

.score--s4 {
  background-color: #EE9428;
}

.score--s5 {
  background-color: #F7C428;
}

.score--s6 {
  background-color: #F7C428;
}

.score--s7 {
  background-color: #A1D916;
}

.score--s8 {
  background-color: #A1D916;
}

.score--s9 {
  background-color: #66DD1D;
}

.score--s10 {
  background-color: #3C820A;
}

/* Placeholder styles */
.placeholder__pakcage-name {
  background-color: #F5F5F5;
  width: 280px;
  height: 24px;
  margin-top: 7px;
}

.placeholder__description-line {
  margin-top: 3px;
  background-color: #F5F5F5;
  width: 350px;
  height: 16px;
}

.placeholder__description-line--second {
  width: 320px;
}

.placeholder__demo-button {
  margin-top: 3px;
  background-color: #F5F5F5;
  height:20px;
  width: 45px;
}

.placeholder__gravatar {
  background-color: #F5F5F5;
  width: 30px;
  height: 30px;
  display: inline-block;
  vertical-align: middle;
}

.placeholder__username {
  display: inline-block;
  background-color: #F5F5F5;
  height: 16px;
  width: 70px;
  display: inline-block;
  vertical-align: middle;
}

.placeholder__score {
  background-color: #F5F5F5;
}

.placeholder__updated {
  background-color: #F5F5F5;
  height: 16px;
  width: 80px;
}

/* xs */
@media (min-width: 0px) and (max-width: 767px) {
  .header-subtitle {
    font-size: 14px;
  }

  .description  {
    word-wrap: break-word;
    width: 270px;
  }
}

/* sm */
@media (min-width: 768px) and (max-width: 991px) {
  .description  {
    width: 220px;
  }
}

/* md */
@media (min-width: 992px) and (max-width: 1199px) {}

/* lg */
@media (min-width: 1200px) {}

